--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
       <div class="content">
         <div class="year">2025</div>
         <h3>Today</h3>
-        <p>You are here.</p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/97/The_Earth_seen_from_Apollo_17.jpg" alt="Blue Marble 2020s">
+        <p>donald trump gets elected.</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Portrait_of_President-elect_Donald_Trump_%28cropped%29.jpg">
       </div>
     </div>
 
